docs/turing/0.3.9/turing-release-notes.adoc
= Viglet Turing ES: Release Notes
Viglet Team <opensource@viglet.com>
:page-layout: documentation
:organization: Viglet Turing
ifdef::backend-pdf[:toc: left]
:toclevels: 5
:toc-title: Table of Content
:doctype: book
:revnumber: 0.3.9
:revdate: 21-12-2023
:source-highlighter: rouge
:pdf-theme: viglet
:pdf-themesdir: {docdir}/../themes/
:page-breadcrumb-title: Connectors
:page-permalink: /turing/0.3.9/release-notes/
:imagesdir: ../
:page-pdf: /docs/turing/turing-release-notes-0.3.9.pdf
:page-product: turing

== 0.3.9

Under Development

== 0.3.8
April 10th 2023

=== New
* Targeting Rules AND and OR
* Facets Types AND and OR
* Facet Range
* OCR Rest API
* LLM Redaction
* AEM: Using JsonPath
* Targeting Rules With Condition
* Web Crawler
* AEM: Once indexing
* Multi Language Facet

=== Improved
* Facet Global Sort
* FQ without two points
* WebCrawler using TurMultiValue
* Group By until 100 groups
* Spring Boot 3.2.5
* Java 21

== 0.3.7
December 21st 2023

=== New
* Maven
* Ranking Rules
* Unit Tests
* Integration Tests
* AEM Connector
* Keycloak Integration
* ApiKey 
* SN: Facets using OR
* SN: fq.op parameter
* SN: Search using asterisk when return no results.
* Create solr core automatically
* Using Artemis

=== Improved
* Spring Boot 3.2.0
* Angular 17
* Spotlight
* UI Flow
* UI: Order by

== 0.3.6
September 22nd 2022

=== New
* Store information about user accesses and searches performed.
* Reports - Generates access report, including targeting rules.
* Latest searches - Allows you to show the latest searches performed by the user.

=== Improved
* Java 17.
* Spring Boot 2.7.6.
* Gradle 7.5.1.
* Angular 15.
  
== 0.3.5
December 3rd 2021

=== New
* Spotlight - Show featured content in search terms based on terms. Search positions can be defined.
* Multi language - Can have multiple languages ​​for each site, using a language-specific solr core. During indexing you can define which language will be indexed.
* UI: Angular 13
* Access Logs - Generate turing access log.
* Did you mean? - It is now possible to parameterize to show \"What did you mean?\" showing and correcting the search term automatically.
* Merge provider - If two indexing sources are from the same indexed content, you can use the Merge Provider to merge these content, for example: Indexing the same page by WEM and Apache Nutch.
* turing.solr.timeout property

=== Improved
* Java 14.
* Spring Boot 2.6.4.
* Gradle 7.4.
* Auto Complete using Stop words.

== 0.3.4
June 18th 2021

=== Improved
* Bugs were fixed.

== 0.3.3
May 31st 2021

=== New
* Chatbot.
* PostgreSQL JDBC.

== 0.3.2
February 8th 2019

=== New
* Unit Test.
* SpaCy Plugin.
* DockerFile.
* SN Site: Import.
* Export SN Site.
* Default Fields into Search.
* NLP and Thesaurus Activation.
* Dynamic Fields: Text, Description and Date.
* SN: MaxRows.
* Deindexing by Type.
* Check Box fields on SN were fixed.
* Using lib instead of modules.
* Release Resources: HTTPClient and SolrServer.
* SNSite using UUID.
* Remove newline and trim to concatenated Text.
* Spring Boot 2.1.2.
